@@ -1,6 +1,10 @@
 # ChangeLog for app-portage/eclass-manpages
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/eclass-manpages/ChangeLog,v 1.11 2008/02/19 20:38:19 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/eclass-manpages/ChangeLog,v 1.12 2008/05/25 04:55:59 zmedico Exp $
+
+  25 May 2008; Zac Medico <zmedico@gentoo.org>
+  eclass-manpages-20070615.ebuild:
+  Block app-admin/webapp-config due to webapp.eclass.5 file collision.
 
   19 Feb 2008; Doug Klima <cardoe@gentoo.org> metadata.xml:
   fix herd
